# embedfileloader

./: Cargo.toml  README.md  icon.rc
src/: main.rs
